Bug 1533215 - Remove assert that can be triggered by malformed MP4. r=jya

The assert removed here can be triggered by malformed mp4s that lack certain
crypto info (the sinf box), but that still indicate samples are encrypted via
sample description entries.

I plan to follow up the removal here by adding logs so we have some way to
detect this case. This will be done as part of bug 1547328.

Depends on D29692

Differential Revision: https://phabricator.services.mozilla.com/D29693